# dodao-ui

./: .env.example  .gitignore  .npmrc  .prettierignore  AGENTS.md  CLAUDE.md  CodingWorkflow.md  Makefile  README.md  aa.html  codegen.yml  docker-compose.yaml  final_table.md  insights-ui - Shortcut.lnk  introspection.yml  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.js  tasks.md  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.junie/: guidelines.md
academy-ui/: .env.example  .gitignore  CodingWorkflow.md  Makefile  README.md  codegen.yml  docker-compose.yaml  init.sql  next.config.js  next.config.mjs  package.json  roadmap.md  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.js  tsconfig.json  vercel.json
ai-agents/crowd-fund-analysis/: Makefile  pyproject.toml
ai-agents/crowd-fund-analysis/cf_analysis_agent/: .env.example  __init__.py  agent.py  agent_state.py  app.py  controller.py  financial_review_agent.py  general_info.py  green_flags.py  red_flags.py  relevant_links.py  t.md  team_info.py
ai-agents/crowd-fund-analysis/cf_analysis_agent/reports/: execution_and_speed.py  final_report.py  financial_health.py  financial_review_agent.py  founder_and_team.py  general_info.py  green_flags.py  key_metrics_report.py  market_opportunity.py  red_flags.py  relevant_links.py  team_info.py  traction.py  valuation.py
ai-agents/crowd-fund-analysis/cf_analysis_agent/structures/: form_c_structures.py  report_structures.py  startup_metrics.py
ai-agents/crowd-fund-analysis/cf_analysis_agent/templates/: commit_info.html  form.html  status.html
ai-agents/crowd-fund-analysis/cf_analysis_agent/utils/: agent_utils.py  env_variables.py  linkedin_utls.py  llm_utils.py  pdf_utils.py  process_project_utils.py  project_info_utils.py  project_utils.py  prompt_utils.py  report_utils.py  s3_utils.py
ai-agents/crowd-fund-analysis/terraform/: main.tf
ai-agents/langflow-tools/: pyproject.toml  urls_scraper.py
base-ui/: .env  .env.example  README.md  docker-compose.yaml  init.sql  next.config.js  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vercel.json
clickable-demos/: Makefile  README.md  arbitrum.html  clickableDemoServiceWorker.js  clickableDemoTooltipScript.js  clickableDemoTooltipStyles.css  package.json  populate-sample-captures.sql  script.js  serve.json  stylesheet.css  tsconfig.json  uniswap.html
defi-alerts/: .prettierignore  README.md  components.json  docker-compose.yaml  init-sql.sql  next.config.mjs  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  vercel.json
docs/: AIInstructions.md  AIKnowledge.md  AddingAPIRoutes.md  BaseFeatures.md  Caching.md  ClaudeCliReference.md  Contributions.md  ErrorHandling.md  HowThemeAndCssWorks.md  Loaders.md  LocalDatabaseSetup.md  PrismaMigrations.md  PrismaTypesAndMigrations.md  ProjectStructure.md  README.md  RequestAndResponseTypes.md  RubricsFeatures.md  SpacingRecomendations.md  TidbitsHubFutures.md  TypeDefinitions.md  UnderstandingSpace.md
dodao-ai-agents/: analysis_langgraph.md
dodao-ai-agents/ai_development/: .gitignore  README.md  pyproject.toml
dodao-ai-agents/ai_development/src/ai_development/: crew.py  main.py
dodao-ai-agents/crew_ai_agent/: .env.example  README.md  pyproject.toml  report.md  report.txt  teams.txt
dodao-ai-agents/crew_ai_agent/src/crew_ai_agent/: crew.py  main.py
dodao-ai-agents/crew_ai_agent/src/crew_ai_agent/config/: agents.yaml  tasks.yaml
dodao-ai-agents/crew_ai_agent/src/crew_ai_agent/tools/: linkedIn_scraping_tool.py  scraping_tool.py
dodao-ai-agents/langgraph-poetry/: Dockerfile  README.md  pyproject.toml  zappa_settings.json
dodao-ai-agents/langgraph-poetry/cf_analysis_agent/: controller.py
dodao-ai-agents/langgraph-poetry/langgraph_poetry/: __init__.py  agent.py  app.py  controller.py  demo.py  financial_review_agent.py  general_info.py  green_flags.py  red_flags.py  relevant_links.py  relevant_links_snippet.py  relevant_links_summary.py  requirements.txt  scrapper.py  team_info.py
dodao-ai-agents/langgraph-poetry/langgraph_poetry/templates/: form.html
dodao-ai-agents/langgraph-poetry/terraform/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
dodao-lambdas/: Makefile  package.json  serverless.yml
dodao-lambdas/pull-tweets/: Makefile  README.md  app.py  credential.json  package.json  pyproject.toml  requirements.txt  script.py  serverless.yml  zappa_settings.json
dodao-lambdas/pull-tweets/handle/: script.py  zappa_settings.json
dodao-lambdas/pull-tweets/libs/twscrape/: accounts_pool.py
dodao-lambdas/pull-tweets/package/: accounts_pool.py  db.py
insights-ui/: .env.example  .eslintrc.json  .gitignore  AIKnowledge.md  Makefile  README.md  docker-compose.yaml  eslint.config.mjs  next.config.ts  package.json  response.txt  response2.txt  tailwind.config.ts  tsconfig.json  turndown.d.ts  vercel.json
lambdas/: Makefile
news-reader/: .eslintrc.json  docker-compose.yaml  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vercel.json
prisma/: schema.prisma
public/: Finalpng
referral-ui/: package.json
src/: .env.example  (+3 more)
(+6012 files in other folders)
