[tool.poetry]
name = "langflow-tools"
version = "0.1.0"
description = ""
authors = ["HussainKhanSherwani <ghulamhussainsherwani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain-community = "^0.3.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"