[tool.poetry]
name = "langgraph-poetry"
version = "0.1.0"
description = ""
authors = ["Hassaan Qaisar <hassaanqaisar2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langgraph = "^0.2.56"
langchain = "^0.3.10"
langchain-core = "^0.3.23"
langchain-community = "^0.3.10"
langchain-openai = "^0.2.12"
scrapingant-client = "^2.1.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
